[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
config = "0.13.2"
reqwest = "0.11.12"
actix-web = "4.2.1"
tokio = { version = "1.21.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.145", features = ["derive"]}
chrono = "0.4.22"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4"
]