[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
tracing-actix-web = "0.6.1"
secrecy = { version = "0.8", features = ["serde"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1.3"
config = "0.13.2"
reqwest = "0.11.12"
actix-web = "4.2.1"
tokio = { version = "1.21.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.145", features = ["derive"]}
chrono = "0.4.16"

[dev-dependencies]
once_cell = "1.15.0"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.6.1"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4"
]